--- a/04-gif-expert-app/src/index.css
+++ b/04-gif-expert-app/src/index.css
@@ -1,13 +1,13 @@
 body {
-  margin: 0;
+  font-size: 1.3rem;
+  padding: 60px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input {
+  color: gray;
+  font-size: 1.2rem;
+  width: 100%;
 }
